libs/toolkit-macros-tests/tests/ui/fail/deps_not_array.rs
use toolkit_macros::gear;

#[gear(name="x", deps="db")]
pub struct X;

fn main() {}
